--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -3,3 +3,5 @@ network = lltr.Network
 
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
+
+**.networkLayer.configurator.networkConfiguratorModule = ""
