Turn off dump generation AND off display "IP/mask"
"IPv4NetworkConfigurator" dump generation: off
Display "IP/mask": off

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -1,5 +1,7 @@
 [General]
 network = lltr.Network
 
+**.interfaceTable.displayAddresses = false
+
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
