Fix assign apps to hosts

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -5,3 +5,7 @@ network = lltr.Network
 
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
+
+**.host0.udpApp[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+**.host?.numUdpApps = 1
+**.host?.udpApp[0].typename = "inet.applications.lltrapp.LLTRApp"
