Add "port" parameter
https://omnetpp.org/doc/omnetpp/manual/#sec:ned-lang:parameters
https://omnetpp.org/doc/omnetpp/manual/#sec:simple-modules:parameters

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -7,5 +7,7 @@ network = lltr.Network
 **.eth[*].mac.duplexMode = true
 
 **.host0.udpApp[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+
 **.host?.numUdpApps = 1
 **.host?.udpApp[0].typename = "inet.applications.lltrapp.LLTRApp"
+**.host?.udpApp[0].port = 1100
