--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -6,13 +6,8 @@ network = lltr.Network
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
 
-**.host0.udpApp[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
-**.host0.tcpApp[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+**.host0.app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
 
-**.host?.numUdpApps = 1
-**.host?.udpApp[0].typename = "inet.applications.lltrapp.LLTRApp"
-**.host?.udpApp[0].port = 1100
-
-**.host?.numTcpApps = 1
-**.host?.tcpApp[0].typename = "inet.applications.lltrapp.LLTRApp"
-**.host?.tcpApp[0].port = 1100
+**.host?.numApps = 1
+**.host?.app[0].typename = "inet.applications.lltrapp.LLTRApp"
+**.host?.app[0].port = 1100
