Put hosts in vector
getSimulation()->getSystemModule()->getSubmodule("host", 1);

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -6,8 +6,8 @@ network = lltr.Network
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
 
-**.host0.app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+**.host[0].app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
 
-**.host?.numApps = 1
-**.host?.app[0].typename = "inet.applications.lltrapp.LLTRApp"
-**.host?.app[0].port = 1100
+**.host[*].numApps = 1
+**.host[*].app[0].typename = "inet.applications.lltrapp.LLTRApp"
+**.host[*].app[0].port = 1100
