--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -6,8 +6,10 @@ network = lltr.Network
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
 
-**.host0.app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+**.hostS.app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
+#**.host{..}.app[0].typename = "inet.applications.lltrapp.LLTRApp"
+# "{..}" - num only "https://omnetpp.org/doc/omnetpp/manual/#sec:ned-lang:parameter-assignments
 
-**.host?.numApps = 1
-**.host?.app[0].typename = "inet.applications.lltrapp.LLTRApp"
-**.host?.app[0].port = 1100
+**.host*.numApps = 1
+**.host*.app[0].typename = "inet.applications.lltrapp.LLTRApp"
+**.host*.app[0].port = 1100
