Implement LLTR protocol v.Basic.GlobalWave

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -6,10 +6,23 @@ network = lltr.Network
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
 
+# optimal flags configuration to minimize simulation time (On: WS,TS)
+#**.host*.tcp.delayedAcksEnabled = true
+#**.host*.tcp.increasedIWEnabled = true
+#**.host*.tcp.sackSupport = true
+**.host*.tcp.windowScalingSupport = true
+**.host*.tcp.timestampSupport = true
+
 **.hostS.app[0].typename = "inet.applications.lltrapp.LLTRSuperApp"
-#**.host{..}.app[0].typename = "inet.applications.lltrapp.LLTRApp"
-# "{..}" - num only "https://omnetpp.org/doc/omnetpp/manual/#sec:ned-lang:parameter-assignments
+**.hostS.app[0].*.vector-recording = true
 
 **.host*.numApps = 1
 **.host*.app[0].typename = "inet.applications.lltrapp.LLTRApp"
 **.host*.app[0].port = 1100
+**.host*.app[0].packetLength = 1446B
+
+# https://omnetpp.org/doc/omnetpp/manual/#sec:ana-sim:disabling-result-items
+**.statistic-recording = false
+**.scalar-recording = false
+**.vector-recording = false
+**.bin-recording = false
