Fix txQueueLimit value on "switch*"
by using external queue.

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -6,6 +6,9 @@ network = lltr.Network
 **.csmacdSupport = false
 **.eth[*].mac.duplexMode = true
 
+**.switch*.eth[*].queueType = "DropTailQueue"
+**.switch*.eth[*].queue.dataQueue.frameCapacity = 100
+
 # optimal flags configuration to minimize simulation time (On: WS,TS)
 #**.host*.tcp.delayedAcksEnabled = true
 #**.host*.tcp.increasedIWEnabled = true
