Add new Networks
More topologies!

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -29,3 +29,15 @@ network = lltr.Network
 **.scalar-recording = false
 **.vector-recording = false
 **.bin-recording = false
+
+[Config N3_2]
+network = lltr.Network_3_2
+
+[Config N2_3]
+network = lltr.Network_2_3
+
+[Config Tree]
+network = lltr.Network_tree
+
+[Config Serial]
+network = lltr.Network_serial
