Add new Networks for len test
pkt count: 164, 214, 264, 300 (314)

--- a/LLTR/simulations/omnetpp.ini
+++ b/LLTR/simulations/omnetpp.ini
@@ -41,3 +41,9 @@ network = lltr.Network_tree
 
 [Config Serial]
 network = lltr.Network_serial
+
+[Config SerialLenTest]
+network = lltr.Network_serial_len_test
+
+[Config SerialLenTestSimple]
+network = lltr.Network_serial_len_test_simple
